tests/parser-test-files/bad-files/parse-if.1.error
error: Malformed if expression
  --> test:4:14
   |
 4 |  (define x (if))
   |               ^ expected a predicate
